<resources>
    <string name="app_name">SMS_ForwardApp</string>
    <string name="your_rules">Your Rules</string>
    <string name="X">X</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="Update_rules">UPDATE RULE</string>
    <string name="rulename">Enter The Rule Name</string>
    <string name="pattern">Enter Required Pattern</string>
    <string name="mobileno">Enter Mobile No.s(Give space between no.)</string>
    <string name="delete">Delete</string>
    <string name="new_rule">NEW RULE</string>

</resources>