<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Add_Rule">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_rule"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"
        />

    <EditText
        android:id="@+id/rulename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/rulename"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/patternname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/pattern"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/mobno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/mobileno"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nradd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        android:background="@drawable/round_style"
        />

</LinearLayout>