<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Add_Rule">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update_rules"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"
        />

    <EditText
        android:id="@+id/runame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/rulename"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/pattn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/pattern"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/mobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/mobileno"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/white"
            android:layout_marginEnd="40dp"
            android:textStyle="bold"
            android:background="@drawable/round_style"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/round_style"
            />



    </LinearLayout>

</LinearLayout>